--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,19 @@ dependencies = [
     "openai>=1.82.0",
     "opencv-python>=4.11.0.86",
     "pillow>=11.2.1",
+    "plotly>=6.1.2",
     "pymongo>=4.13.0",
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
     "qdrant-client>=1.14.2",
+    "redis>=6.2.0",
+    "safetensors>=0.5.3",
+    "scikit-learn>=1.6.1",
     "streamlit>=1.45.1",
     "streamlit-webrtc>=0.62.4",
     "tensorflow>=2.14.0",
+    "torch>=2.7.0",
+    "torchvision>=0.22.0",
     "ultralytics>=8.3.145",
     "uvicorn>=0.34.2",
 ]
